<resources>
    <string name="app_name">Hi Joe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onboard_main_1">Detect Your Plant Disease</string>
    <string name="onboard_normal_1">through Smartphone</string>
    <string name="onboard_main_2">One Click Only</string>
    <string name="onboard_normal_2">No Need to Worry!</string>
    <string name="lets_go">let\'s go</string>
    <string name="greeting">Hi Plantsman</string>
    <string name="desc_greet">Open your camera or upload from gallery to detect your plant disease</string>
    <string name="camera">Camera</string>
    <string name="desc_camera">Use built-in camera to detect the diseases</string>
    <string name="gallery">Gallery</string>
    <string name="desc_gallery">Upload photo from gallery to detect the diseases</string>
    <string name="select_image">Select Image</string>
    <string name="access_denied">Access Denied</string>
    <string name="desc_access_denied">Please open setting and grant its permission to this application</string>
    <string name="go_to_setting">SETTING</string>
    <string name="cancel">CANCEL</string>
    <string name="camera_not_found">Camera not found</string>
    <string name="gallery_not_found">Gallery not found</string>
    <string name="identifying">Please Wait</string>
    <string name="accuracy">Accuracy</string>
    <string name="title_detail_information">Detail Information</string>
    <string name="plant">Plant :</string>
    <string name="description">Description :</string>
    <string name="solution">Solution :</string>
    <string name="home">home</string>
    <string name="dummy_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sodales ipsum vitae magna suscipit ornare. Suspendisse consectetur lectus id turpis pulvinar, in hendrerit erat semper.</string>
    <string name="dummy_solution">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sodales ipsum vitae magna suscipit ornare.</string>
    <string name="attention">attention</string>
    <string name="desc_under50percent">The result accuracy is under 50%. Be wise to use the information or use another image</string>
    <string name="desc_tflite_error">Something went wrong in our prediction system. Try to use another image</string>
    <string name="desc_network_error">Seems like you\'re offline now. Please check your connection</string>
    <string name="desc_unknown_error">Something went wrong. We are still looking for the cause. Please be patien</string>
    <string name="desc_empty_data">We cannot find information about your plant disease</string>
</resources>