<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/soft_green"
    android:padding="16dp"
    tools:context=".ui.onboarding.placeholder.SecondBoardingFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/materialTextView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline3"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/ic_second_onboarding" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView3"
        style="@style/Theme.HiJoe.H1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/onboard_main_2"
        app:layout_constraintBottom_toTopOf="@+id/materialTextView4"
        app:layout_constraintEnd_toEndOf="@+id/shapeableImageView4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/shapeableImageView4"
        app:layout_constraintTop_toBottomOf="@+id/shapeableImageView4" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/onboard_normal_2"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/shapeableImageView5"
        app:layout_constraintEnd_toEndOf="@+id/materialTextView3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/materialTextView3"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView3" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/materialTextView4"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView4"
        app:srcCompat="@drawable/ic_second_dot" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDoneBoarding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/dark_green"
        android:text="@string/lets_go"
        android:paddingVertical="12dp"
        android:paddingHorizontal="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>