<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.result.ResultActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        android:clickable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:padding="12dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDiseaseName"
                style="@style/Theme.HiJoe.H2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/materialTextView7"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Hello world" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/accuracy"
                android:textColor="@color/dark_green"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/circularProgressIndicator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tvDiseaseName"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/circularProgressIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:indeterminate="false"
                app:indicatorColor="@color/dark_green"
                app:indicatorSize="56dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="h,1:1"
                app:layout_constraintEnd_toEndOf="@+id/materialTextView7"
                app:layout_constraintStart_toEndOf="@+id/tvDiseaseName"
                app:layout_constraintStart_toStartOf="@+id/materialTextView7"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView7"
                app:trackColor="@color/soft_green"
                app:trackCornerRadius="8dp"
                tools:progress="65" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/dark_green"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/circularProgressIndicator"
                app:layout_constraintEnd_toEndOf="@+id/circularProgressIndicator"
                app:layout_constraintStart_toStartOf="@+id/circularProgressIndicator"
                app:layout_constraintTop_toTopOf="@+id/circularProgressIndicator"
                tools:text="65%" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="24dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        android:clickable="false"
        app:layout_constraintBottom_toTopOf="@+id/btnResultToHome"
        app:layout_constraintEnd_toEndOf="@+id/materialCardView"
        app:layout_constraintStart_toStartOf="@+id/materialCardView"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="28dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/materialTextView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_detail_information"
                    android:textColor="@color/teal_700"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/materialTextView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/plant"
                    app:layout_constraintStart_toStartOf="@+id/materialTextView8"
                    app:layout_constraintTop_toBottomOf="@+id/materialTextView8" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvPlantName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/materialTextView13"
                    app:layout_constraintTop_toBottomOf="@+id/materialTextView13"
                    tools:text="Pepper Bell" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/materialTextView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/description"
                    app:layout_constraintStart_toStartOf="@+id/tvPlantName"
                    app:layout_constraintTop_toBottomOf="@+id/tvPlantName" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvDiseaseDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:justificationMode="inter_word"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/materialTextView14"
                    app:layout_constraintTop_toBottomOf="@+id/materialTextView14"
                    tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sodales ipsum vitae magna suscipit ornare. Suspendisse consectetur lectus id turpis pulvinar, in hendrerit erat semper." />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/materialTextView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/solution"
                    app:layout_constraintStart_toStartOf="@+id/tvDiseaseDescription"
                    app:layout_constraintTop_toBottomOf="@+id/tvDiseaseDescription" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvDiseaseSolution"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:justificationMode="inter_word"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/materialTextView15"
                    app:layout_constraintTop_toBottomOf="@+id/materialTextView15"
                    tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sodales ipsum vitae magna suscipit ornare." />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/btnResultToHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_home"
        android:text="@string/home"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>